Такие вещи можно разрулить ещё на стадии конфигурирования composer.json
$loader->add('Framework', __DIR__.'/../src');
$loader->add('App', __DIR__.'/../src');

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,10 @@
 {
+    "autoload": {
+        "psr-4": {
+            "Framework\\": "src/Framework",
+            "App\\": "src/App"
+        }
+    },
     "require": {
         "php": ">=7.2.0",
         "pimple/pimple": "^3.2",
